--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,3 +34,15 @@
   flex-direction: column;
   gap: 5px;
 }
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-nav-bar {
+  width: 230px;
+  display: flex;
+  justify-content: space-evenly;
+}
