--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,3 +46,51 @@
   display: flex;
   justify-content: space-evenly;
 }
+
+.login {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  background-color: #5ec0d1;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.login_title {
+  text-align: center;
+}
+
+h2 {
+  padding: 0;
+  margin: 0;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login_input {
+  display: block;
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding-left: 10px;
+}
+
+.login_btn {
+  border: none;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  background-color: #299886;
+  border-radius: 10px;
+}
