--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,3 +117,54 @@ h2 {
   background-color: #299886;
   border-radius: 10px;
 }
+
+.card {
+  width: 300px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #0084a9;
+  border-radius: 20px;
+  padding: 5px;
+}
+
+.questions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+  width: 800px;
+  /* flex-direction: row; */
+}
+
+.question_title {
+  font-size: 14px;
+  text-align: center;
+}
+
+.question_form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.question_input {
+  display: block;
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+.question_btn {
+  border: none;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  background-color: #299886;
+  border-radius: 10px;
+}
