--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,6 +116,12 @@ h2 {
   margin-top: 20px;
   background-color: #299886;
   border-radius: 10px;
+  transition: all 0.3s linear;
+}
+
+.login_btn:hover {
+  cursor: pointer;
+  background-color: #197c70;
 }
 
 .card {
@@ -128,6 +134,10 @@ h2 {
   border: 2px solid #0084a9;
   border-radius: 20px;
   padding: 5px;
+}
+
+.card_wrong {
+  border: 2px solid #f00f0f;
 }
 
 .questions {
@@ -167,4 +177,23 @@ h2 {
   margin-top: 20px;
   background-color: #299886;
   border-radius: 10px;
+  transition: all 0.3s linear;
+}
+
+.question_btn:hover {
+  cursor: pointer;
+  background-color: #197c70;
+}
+
+.profile_wrap {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  background-color: #5ec0d1;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
 }
